@@ -148,6 +148,9 @@ Bugs fixed
   builds
 * #8865: LaTeX: Restructure the index nodes inside title nodes only on LaTeX
   builds
+* C, :rst:dir:`c:alias` skip symbols without explicit declarations
+  instead of crashing.
+* C, :rst:dir:`c:alias` give a warning when the root symbol is not declared.
 
 Testing
 --------
